Sources/Kernel/Aid/ShaderPack/HLSLParser.cpp

// Generated from HLSL.g4 by ANTLR 4.13.1


#include "HLSLListener.h"
#include "HLSLVisitor.h"

#include "HLSLParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct HLSLParserStaticData final {
  HLSLParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  HLSLParserStaticData(const HLSLParserStaticData&) = delete;
  HLSLParserStaticData(HLSLParserStaticData&&) = delete;
  HLSLParserStaticData& operator=(const HLSLParserStaticData&) = delete;
  HLSLParserStaticData& operator=(HLSLParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag hlslParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
HLSLParserStaticData *hlslParserStaticData = nullptr;

void hlslParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (hlslParserStaticData != nullptr) {
    return;
  }
#else
  assert(hlslParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<HLSLParserStaticData>(
    std::vector<std::string>{
      "hlslFile", "element", "structDeclaration", "structMember", "type", 
      "functionDeclaration", "parameterList", "parameter", "block", "statement", 
      "declaration", "assignment", "returnStatement", "expression", "functionCall", 
      "constructorExpression", "argumentList", "semantic"
    },
    std::vector<std::string>{
      "", "'struct'", "'{'", "'}'", "';'", "':'", "'float'", "'float2'", 
      "'float3'", "'float4'", "'int'", "'matrix'", "'('", "')'", "','", 
      "'='", "'return'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "ID", "DIGIT", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  hlslParserStaticData = staticData.release();
}

}

HLSLParser::HLSLParser(TokenStream *input) : HLSLParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

HLSLParser::HLSLParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  HLSLParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *hlslParserStaticData->atn, hlslParserStaticData->decisionToDFA, hlslParserStaticData->sharedContextCache, options);
}

HLSLParser::~HLSLParser() {
  delete _interpreter;
}

const atn::ATN& HLSLParser::getATN() const {
  return *hlslParserStaticData->atn;
}

std::string HLSLParser::getGrammarFileName() const {
  return "HLSL.g4";
}

const std::vector<std::string>& HLSLParser::getRuleNames() const {
  return hlslParserStaticData->ruleNames;
}

const dfa::Vocabulary& HLSLParser::getVocabulary() const {
  return hlslParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView HLSLParser::getSerializedATN() const {
  return hlslParserStaticData->serializedATN;
}


//----------------- HlslFileContext ------------------------------------------------------------------

HLSLParser::HlslFileContext::HlslFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HLSLParser::HlslFileContext::EOF() {
  return getToken(HLSLParser::EOF, 0);
}

std::vector<HLSLParser::ElementContext *> HLSLParser::HlslFileContext::element() {
  return getRuleContexts<HLSLParser::ElementContext>();
}

HLSLParser::ElementContext* HLSLParser::HlslFileContext::element(size_t i) {
  return getRuleContext<HLSLParser::ElementContext>(i);
}


size_t HLSLParser::HlslFileContext::getRuleIndex() const {
  return HLSLParser::RuleHlslFile;
}

void HLSLParser::HlslFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHlslFile(this);
}

void HLSLParser::HlslFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHlslFile(this);
}


std::any HLSLParser::HlslFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitHlslFile(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::HlslFileContext* HLSLParser::hlslFile() {
  HlslFileContext *_localctx = _tracker.createInstance<HlslFileContext>(_ctx, getState());
  enterRule(_localctx, 0, HLSLParser::RuleHlslFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 135106) != 0)) {
      setState(36);
      element();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    match(HLSLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

HLSLParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HLSLParser::StructDeclarationContext* HLSLParser::ElementContext::structDeclaration() {
  return getRuleContext<HLSLParser::StructDeclarationContext>(0);
}

HLSLParser::FunctionDeclarationContext* HLSLParser::ElementContext::functionDeclaration() {
  return getRuleContext<HLSLParser::FunctionDeclarationContext>(0);
}


size_t HLSLParser::ElementContext::getRuleIndex() const {
  return HLSLParser::RuleElement;
}

void HLSLParser::ElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElement(this);
}

void HLSLParser::ElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElement(this);
}


std::any HLSLParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::ElementContext* HLSLParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 2, HLSLParser::RuleElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(46);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HLSLParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(44);
        structDeclaration();
        break;
      }

      case HLSLParser::T__5:
      case HLSLParser::T__6:
      case HLSLParser::T__7:
      case HLSLParser::T__8:
      case HLSLParser::T__9:
      case HLSLParser::T__10:
      case HLSLParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(45);
        functionDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructDeclarationContext ------------------------------------------------------------------

HLSLParser::StructDeclarationContext::StructDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HLSLParser::StructDeclarationContext::ID() {
  return getToken(HLSLParser::ID, 0);
}

std::vector<HLSLParser::StructMemberContext *> HLSLParser::StructDeclarationContext::structMember() {
  return getRuleContexts<HLSLParser::StructMemberContext>();
}

HLSLParser::StructMemberContext* HLSLParser::StructDeclarationContext::structMember(size_t i) {
  return getRuleContext<HLSLParser::StructMemberContext>(i);
}


size_t HLSLParser::StructDeclarationContext::getRuleIndex() const {
  return HLSLParser::RuleStructDeclaration;
}

void HLSLParser::StructDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStructDeclaration(this);
}

void HLSLParser::StructDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStructDeclaration(this);
}


std::any HLSLParser::StructDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitStructDeclaration(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::StructDeclarationContext* HLSLParser::structDeclaration() {
  StructDeclarationContext *_localctx = _tracker.createInstance<StructDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, HLSLParser::RuleStructDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    match(HLSLParser::T__0);
    setState(49);
    match(HLSLParser::ID);
    setState(50);
    match(HLSLParser::T__1);
    setState(52); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(51);
      structMember();
      setState(54); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 135104) != 0));
    setState(56);
    match(HLSLParser::T__2);
    setState(57);
    match(HLSLParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructMemberContext ------------------------------------------------------------------

HLSLParser::StructMemberContext::StructMemberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HLSLParser::TypeContext* HLSLParser::StructMemberContext::type() {
  return getRuleContext<HLSLParser::TypeContext>(0);
}

tree::TerminalNode* HLSLParser::StructMemberContext::ID() {
  return getToken(HLSLParser::ID, 0);
}

HLSLParser::SemanticContext* HLSLParser::StructMemberContext::semantic() {
  return getRuleContext<HLSLParser::SemanticContext>(0);
}


size_t HLSLParser::StructMemberContext::getRuleIndex() const {
  return HLSLParser::RuleStructMember;
}

void HLSLParser::StructMemberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStructMember(this);
}

void HLSLParser::StructMemberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStructMember(this);
}


std::any HLSLParser::StructMemberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitStructMember(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::StructMemberContext* HLSLParser::structMember() {
  StructMemberContext *_localctx = _tracker.createInstance<StructMemberContext>(_ctx, getState());
  enterRule(_localctx, 6, HLSLParser::RuleStructMember);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    type();
    setState(60);
    match(HLSLParser::ID);
    setState(61);
    match(HLSLParser::T__4);
    setState(62);
    semantic();
    setState(63);
    match(HLSLParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

HLSLParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HLSLParser::TypeContext::ID() {
  return getToken(HLSLParser::ID, 0);
}


size_t HLSLParser::TypeContext::getRuleIndex() const {
  return HLSLParser::RuleType;
}

void HLSLParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void HLSLParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


std::any HLSLParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::TypeContext* HLSLParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 8, HLSLParser::RuleType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 135104) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

HLSLParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HLSLParser::TypeContext* HLSLParser::FunctionDeclarationContext::type() {
  return getRuleContext<HLSLParser::TypeContext>(0);
}

tree::TerminalNode* HLSLParser::FunctionDeclarationContext::ID() {
  return getToken(HLSLParser::ID, 0);
}

HLSLParser::BlockContext* HLSLParser::FunctionDeclarationContext::block() {
  return getRuleContext<HLSLParser::BlockContext>(0);
}

HLSLParser::ParameterListContext* HLSLParser::FunctionDeclarationContext::parameterList() {
  return getRuleContext<HLSLParser::ParameterListContext>(0);
}

HLSLParser::SemanticContext* HLSLParser::FunctionDeclarationContext::semantic() {
  return getRuleContext<HLSLParser::SemanticContext>(0);
}


size_t HLSLParser::FunctionDeclarationContext::getRuleIndex() const {
  return HLSLParser::RuleFunctionDeclaration;
}

void HLSLParser::FunctionDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDeclaration(this);
}

void HLSLParser::FunctionDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDeclaration(this);
}


std::any HLSLParser::FunctionDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclaration(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::FunctionDeclarationContext* HLSLParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, HLSLParser::RuleFunctionDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    type();
    setState(68);
    match(HLSLParser::ID);
    setState(69);
    match(HLSLParser::T__11);
    setState(71);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 135104) != 0)) {
      setState(70);
      parameterList();
    }
    setState(73);
    match(HLSLParser::T__12);
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HLSLParser::T__4) {
      setState(74);
      match(HLSLParser::T__4);
      setState(75);
      semantic();
    }
    setState(78);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

HLSLParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HLSLParser::ParameterContext *> HLSLParser::ParameterListContext::parameter() {
  return getRuleContexts<HLSLParser::ParameterContext>();
}

HLSLParser::ParameterContext* HLSLParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<HLSLParser::ParameterContext>(i);
}


size_t HLSLParser::ParameterListContext::getRuleIndex() const {
  return HLSLParser::RuleParameterList;
}

void HLSLParser::ParameterListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList(this);
}

void HLSLParser::ParameterListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList(this);
}


std::any HLSLParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::ParameterListContext* HLSLParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 12, HLSLParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    parameter();
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HLSLParser::T__13) {
      setState(81);
      match(HLSLParser::T__13);
      setState(82);
      parameter();
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

HLSLParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HLSLParser::TypeContext* HLSLParser::ParameterContext::type() {
  return getRuleContext<HLSLParser::TypeContext>(0);
}

tree::TerminalNode* HLSLParser::ParameterContext::ID() {
  return getToken(HLSLParser::ID, 0);
}

HLSLParser::SemanticContext* HLSLParser::ParameterContext::semantic() {
  return getRuleContext<HLSLParser::SemanticContext>(0);
}


size_t HLSLParser::ParameterContext::getRuleIndex() const {
  return HLSLParser::RuleParameter;
}

void HLSLParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void HLSLParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}


std::any HLSLParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::ParameterContext* HLSLParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 14, HLSLParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    type();
    setState(89);
    match(HLSLParser::ID);
    setState(90);
    match(HLSLParser::T__4);
    setState(91);
    semantic();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

HLSLParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HLSLParser::StatementContext *> HLSLParser::BlockContext::statement() {
  return getRuleContexts<HLSLParser::StatementContext>();
}

HLSLParser::StatementContext* HLSLParser::BlockContext::statement(size_t i) {
  return getRuleContext<HLSLParser::StatementContext>(i);
}


size_t HLSLParser::BlockContext::getRuleIndex() const {
  return HLSLParser::RuleBlock;
}

void HLSLParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void HLSLParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any HLSLParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::BlockContext* HLSLParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, HLSLParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(HLSLParser::T__1);
    setState(97);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 200640) != 0)) {
      setState(94);
      statement();
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(100);
    match(HLSLParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

HLSLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HLSLParser::DeclarationContext* HLSLParser::StatementContext::declaration() {
  return getRuleContext<HLSLParser::DeclarationContext>(0);
}

HLSLParser::AssignmentContext* HLSLParser::StatementContext::assignment() {
  return getRuleContext<HLSLParser::AssignmentContext>(0);
}

HLSLParser::ReturnStatementContext* HLSLParser::StatementContext::returnStatement() {
  return getRuleContext<HLSLParser::ReturnStatementContext>(0);
}


size_t HLSLParser::StatementContext::getRuleIndex() const {
  return HLSLParser::RuleStatement;
}

void HLSLParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void HLSLParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any HLSLParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::StatementContext* HLSLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 18, HLSLParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(111);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(102);
      declaration();
      setState(103);
      match(HLSLParser::T__3);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(105);
      assignment();
      setState(106);
      match(HLSLParser::T__3);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(108);
      returnStatement();
      setState(109);
      match(HLSLParser::T__3);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

HLSLParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HLSLParser::TypeContext* HLSLParser::DeclarationContext::type() {
  return getRuleContext<HLSLParser::TypeContext>(0);
}

tree::TerminalNode* HLSLParser::DeclarationContext::ID() {
  return getToken(HLSLParser::ID, 0);
}


size_t HLSLParser::DeclarationContext::getRuleIndex() const {
  return HLSLParser::RuleDeclaration;
}

void HLSLParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void HLSLParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


std::any HLSLParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

HLSLParser::DeclarationContext* HLSLParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 20, HLSLParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    type();
    setState(114);
    match(HLSLParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

HLSLParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HLSLParser::AssignmentContext::ID() {
  return getToken(HLSLParser::ID, 0);
}

HLSLParser::ExpressionContext* HLSLParser::AssignmentContext::expression() {
  return getRuleContext<HLSLParser::ExpressionContext>(0);
}


size_t HLSLParser::AssignmentContext::getRuleIndex() const {
  return HLSLParser::RuleAssignment;
}

void HLSLParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void HLSLParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HLSLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


std::any HLSLParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HLSLVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}
